@@ -1,3 +1,9 @@
+Wed Jan  2 20:17:48 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/hidparser.c: Parsing continues if the HID path for a report
+   ends in 0x00000000 (these will not be made available). Commonly used
+   as placeholders.
+
 Wed Jan  2 19:59:21 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - drivers/libhid.[ch]: In HIDDumpTree() show all reports that are parsed
